<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textIsSelectable="false"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_email"
                app:hintTextColor="@android:color/black"
                app:boxStrokeColor="@android:color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/email_icon"
                app:startIconTint="@android:color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@android:color/black"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-black"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_password_layout"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_password"
                app:hintTextColor="@android:color/black"
                app:boxStrokeColor="@android:color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/password_icon"
                app:startIconTint="@android:color/black"
                app:endIconMode="password_toggle"
                app:endIconTint="@android:color/black"

                app:errorTextAppearance="@android:color/holo_red_dark"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-black"
                    android:inputType="textPassword"


                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_confirmpassword_layout"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_confirm_password"
                app:hintTextColor="@android:color/black"
                app:boxStrokeColor="@android:color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/password_icon"
                app:startIconTint="@android:color/black"
                app:endIconMode="password_toggle"
                app:endIconTint="@android:color/black"
                app:errorTextAppearance="@android:color/holo_red_dark"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-black"
                    android:inputType="textPassword"


                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_dark"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:onClick="handleRegister"
                android:text="@string/register" />

            <Button

                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="#00000000"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/holo_blue_dark"
                android:onClick="callLoginActivity"
                android:text="Login" />





        </LinearLayout>

    </LinearLayout>

</ScrollView>